Add sample component packages
- sticky-header: Fixed header with navigation
- sidebar: Collapsible sidebar navigation
- contact-form: Contact form with submission handling
- Add manifest.json for package registry

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,14 @@ node_modules
 /.svelte-kit
 /build
 
+# Nix
+result
+result-*
+*.drv
+
+# NixTrix patches
+src/lib/nixtrix/patches/
+
 # OS
 .DS_Store
 Thumbs.db
