Add setup/merge capability for packages
- Add auth library as example package with setup manifest
- Document setup strategies: create, merge, skip
- Document merge types: append, prepend, replace
- Include example merged outputs for hooks.server.ts and app.d.ts
- Create SETUP.md with full documentation

--- a/src/lib/packages/manifest.json
+++ b/src/lib/packages/manifest.json
@@ -14,5 +14,10 @@
     }
   },
   "routes": {},
-  "libs": {}
+  "libs": {
+    "auth": {
+      "path": "libs/auth",
+      "description": "Authentication with better-auth"
+    }
+  }
 }
