--- a/templates/base/package.json
+++ b/templates/base/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "bun --bun vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -12,7 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"nixtrix": "bash scripts/nixtrix"
+		"nixtrix": "NIXTRIX_DIR=../nixtrix bun ../nixtrix/cli/src/index.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^2.0.2",
