--- a/templates/base/package.json
+++ b/templates/base/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"nixtrix": "NIXTRIX_DIR=../nixtrix bun ../nixtrix/cli/src/index.ts"
+		"nixtrix": "NIXTRIX_DIR=../nixtrix bunx ../nixtrix/cli/src/index.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^2.0.2",
